--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="GKFLs6aHekjJJjBAbLYys-OVBN8wKYuyhbyRnuH9jEc" />
+  <link rel="canonical" href="https://logic-circuits-learning-hub.pages.dev/">
   <meta name="robots" content="index, follow" />
   <meta name="keywords" content="truth tables, logic circuits, digital electronics, boolean logic, logic gates, circuit design" />
-  <meta name="description" content="An in-depth informational article explaining why truth tables are important in logic circuits, covering digital logic concepts, circuit analysis, comparisons, and practical applications." />
+  <meta name="description" content="An in-depth informational article explaining why truth tables are important in logic circuits, covering digital logic concepts." />
   <title>Why Truth Tables Are Important in Logic Circuits</title>
 
   <style>
@@ -194,3 +196,4 @@
 
 </body>
 </html>
+
